fix stretching images when not in 16/9 aspect ratio

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -248,12 +248,8 @@ body {
     margin-left: auto;
     margin-right: auto;
     aspect-ratio: 16/9;
-    background-color: var(--lightblue); /*placeholder*/
-}
-
-.media-image {
-    width: 100%;
-    height: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .media-image-text {
@@ -265,14 +261,14 @@ body {
     color: var(--white);
 }
 
-.media-image-wrapper {
-    width: 100%;
-    height: 100%;
+.media-image {
+    max-width: 100%;
+    max-height: 100%;
     position: relative;
     display: none;
 }
 
-.media-image-wrapper-visible {
+.media-image-visible {
     display: block;
 }
 
